Update Roboflow API key in training notebook for security compliance

--- a/training_notebooks/basketball_player_detection_training.ipynb
+++ b/training_notebooks/basketball_player_detection_training.ipynb
@@ -370,7 +370,7 @@
         "!pip install roboflow\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"sEx489KMvifSEAxAfJnz\")\n",
+        "rf = Roboflow(api_key=\"roboflow_api_key\")\n",
         "project = rf.workspace(\"workspace-5ujvu\").project(\"basketball-players-fy4c2-vfsuv\")\n",
         "version = project.version(17)\n",
         "dataset = version.download(\"yolov5\")\n"
